--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
-    "bootstrap": "^5.2.2",
+    "bootstrap": "^5.2.3",
+    "date-fns": "^2.29.3",
     "mdb-react-ui-kit": "^5.0.0",
     "react": "^18.2.0",
+    "react-day-picker": "^8.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
