--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
+    "json-loader": "^0.5.7",
     "mdb-react-ui-kit": "^5.0.0",
     "react": "^18.2.0",
+    "react-checkmark": "^1.4.0",
     "react-day-picker": "^8.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-ios-time-picker": "^0.2.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-time-picker": "^5.2.0",
+    "react-times": "^3.1.12",
+    "react-useanimations": "^2.10.0",
     "socket.io-client": "^4.5.4",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
