--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-ios-time-picker": "^0.2.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.0.0",
     "react-time-picker": "^5.2.0",
     "react-times": "^3.1.12",
     "react-useanimations": "^2.10.0",
