--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-ios-time-picker": "^0.2.2",
+    "react-range-step-input": "^1.3.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
