--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "mdb-react-ui-kit": "^5.0.0",
     "react": "^18.2.0",
     "react-checkmark": "^1.4.0",
+    "react-color": "^2.19.3",
+    "react-colorful": "^5.6.1",
     "react-day-picker": "^8.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-ios-time-picker": "^0.2.2",
+    "react-native-color-picker": "^0.6.0",
     "react-range-step-input": "^1.3.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
@@ -25,6 +28,7 @@
     "react-time-picker": "^5.2.0",
     "react-times": "^3.1.12",
     "react-useanimations": "^2.10.0",
+    "rgb-hex": "^4.0.1",
     "socket.io-client": "^4.5.4",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
