--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "date-fns": "^2.29.3",
     "json-loader": "^0.5.7",
     "mdb-react-ui-kit": "^5.0.0",
+    "nw-react-slider": "^2.0.1",
+    "primereact": "^9.3.1",
     "react": "^18.2.0",
     "react-checkmark": "^1.4.0",
+    "react-circular-input": "^0.2.4",
     "react-color": "^2.19.3",
     "react-colorful": "^5.6.1",
     "react-day-picker": "^8.4.1",
+    "react-dial-knob": "^1.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-ios-time-picker": "^0.2.2",
     "react-native-color-picker": "^0.6.0",
+    "react-range-slider-input": "^3.0.7",
     "react-range-step-input": "^1.3.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
