--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
+    "html-react-parser": "^3.0.16",
     "json-loader": "^0.5.7",
     "mdb-react-ui-kit": "^5.0.0",
     "nw-react-slider": "^2.0.1",
@@ -22,7 +23,9 @@
     "react-day-picker": "^8.4.1",
     "react-dial-knob": "^1.3.0",
     "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.6.0",
+    "react-input-color": "^4.0.1",
     "react-ios-time-picker": "^0.2.2",
     "react-native-color-picker": "^0.6.0",
     "react-range-slider-input": "^3.0.7",
