added requireAuth & context & custom hooks & token implementation

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,10 +14,13 @@
     "date-fns": "^2.29.3",
     "html-react-parser": "^3.0.16",
     "json-loader": "^0.5.7",
+    "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^5.0.0",
+    "moment-timezone": "^0.5.43",
     "nw-react-slider": "^2.0.1",
     "primereact": "^9.3.1",
     "react": "^18.2.0",
+    "react-auth-kit": "^3.0.0-alpha.34",
     "react-checkmark": "^1.4.0",
     "react-circular-input": "^0.2.4",
     "react-color": "^2.19.3",
