--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "react-day-picker": "^8.4.1",
     "react-dial-knob": "^1.3.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.6.0",
     "react-input-color": "^4.0.1",
     "react-ios-time-picker": "^0.2.2",
+    "react-modal": "^3.16.1",
     "react-native-color-picker": "^0.6.0",
     "react-range-slider-input": "^3.0.7",
     "react-range-step-input": "^1.3.0",
