--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,38 +15,31 @@
     "html-react-parser": "^3.0.16",
     "json-loader": "^0.5.7",
     "lodash": "^4.17.21",
-    "mdb-react-ui-kit": "^5.0.0",
     "moment-timezone": "^0.5.43",
     "nw-react-slider": "^2.0.1",
+    "primeicons": "^7.0.0",
     "primereact": "^9.3.1",
     "react": "^18.2.0",
     "react-auth-kit": "^3.0.0-alpha.34",
-    "react-checkmark": "^1.4.0",
     "react-circular-input": "^0.2.4",
     "react-color": "^2.19.3",
     "react-colorful": "^5.6.1",
     "react-day-picker": "^8.4.1",
-    "react-dial-knob": "^1.3.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
-    "react-html-parser": "^2.0.2",
     "react-icons": "^4.6.0",
-    "react-input-color": "^4.0.1",
     "react-ios-time-picker": "^0.2.2",
     "react-modal": "^3.16.1",
     "react-native-color-picker": "^0.6.0",
     "react-range-slider-input": "^3.0.7",
-    "react-range-step-input": "^1.3.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
     "react-time-picker": "^5.2.0",
-    "react-times": "^3.1.12",
     "react-useanimations": "^2.10.0",
     "rgb-hex": "^4.0.1",
     "socket.io-client": "^4.5.4",
-    "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^5.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
