--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-day-picker": "^8.4.1",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
-    "react-icons": "^4.6.0",
+    "react-icons": "^5.5.0",
     "react-ios-time-picker": "^0.2.2",
     "react-modal": "^3.16.1",
     "react-native-color-picker": "^0.6.0",
@@ -35,6 +35,7 @@
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
     "react-time-picker": "^5.2.0",
+    "react-toastify": "^11.0.5",
     "react-useanimations": "^2.10.0",
     "rgb-hex": "^4.0.1",
     "socket.io-client": "^4.5.4",
